2002-06-22  Jim Meyering  <meyering@lucent.com>

	Update to latest tools.  Suggestions from Paul Eggert.
	* stdbool.m4: New file, from diffutils-2.8.2.
	* gnu-source.m4: Update from diffutils-2.8.2.
	* prereq.m4: Change each use of AC_CHECK_HEADERS(stdbool.h)
	to AC_HEADER_STDBOOL

2002-06-21  Jim Meyering  <meyering@lucent.com>

	* c-bs-a.m4: Add comment, from diffutils-2.8.2.
	* mbrtowc.m4: Likewise.

	* mbstate_t.m4: Update from diffutils-2.8.2.
	* mbswidth.m4: Reflect name change:
	s/AC_MBSTATE_T/AC_TYPE_MBSTATE_T.
	* prereq.m4 (jm_PREREQ_QUOTEARG): Likewise.

	* lib-link.m4: Update from gettext-0.11.2.
	* gettext.m4: Likewise.

	* jm-macros.m4 (jm_CHECK_ALL_HEADERS): Check for hurd.h.
	From Alfred M. Szmidt.

2002-05-19  Paul Eggert  <eggert@twinsun.com>

	* jm-macros.m4 (jm_CHECK_ALL_TYPES): Check for st_author.

2002-06-07  Jim Meyering  <meyering@lucent.com>

	* prereq.m4 (jm_PREREQ_STAT): Check for sys/param.h and sys/mount.h.
	They're needed at least for NetBSD 1.5.2.
	($statxfs_includes): Include those same headers.
	($statxfs_includes): Include sys/vfs.h if available.
	($statxfs_includes): Likewise for sys/statvfs.h.
	Check for the following members in both structs statfs and statvfs:
	f_basetype, f_type, f_fsid.__val, f_namemax, f_namelen.

2002-06-01  Jim Meyering  <meyering@lucent.com>

	* d-type.m4 (jm_CHECK_TYPE_STRUCT_DIRENT_D_TYPE): Rename macro:
	s/D_TYPE_IN_DIRENT/HAVE_STRUCT_DIRENT_D_TYPE/.

2002-05-28  Jim Meyering  <meyering@lucent.com>

	* readdir.m4 (jm_FUNC_READDIR): Undefine `mkdir', not `rmdir'.
	Reported by Volker Borchert.

2002-05-27  Jim Meyering  <meyering@lucent.com>

	* gettimeofday.m4 (AC_FUNC_GETTIMEOFDAY_CLOBBER): Also replace
	localtime.

	* readdir.m4 (jm_FUNC_READDIR): Undefine `rmdir' so we don't try to
	use the replacement function; it wouldn't resolve at link time.
	Reported by Volker Borchert.

2002-04-30  Jim Meyering  <meyering@lucent.com>

	* prereq.m4 (jm_PREREQ): Add jm_PREREQ_STAT.
