@@ -1,5 +1,10 @@
 2002-06-22  Jim Meyering  <meyering@lucent.com>
 
+	* jm-macros.m4 (jm_CHECK_ALL_TYPES): Don't require AC__GNU_SOURCE,
+	now that configure.ac uses AC_GNU_SOURCE.
+	(jm_MACROS): Rename: jm_FUNC_FNMATCH to AC_FUNC_FNMATCH_GNU.
+	* prereq.m4 (jm_PREREQ_EXCLUDE): Likewise, wrt jm_FUNC_FNMATCH.
+
 	Update to latest tools.  Suggestions from Paul Eggert.
 	* stdbool.m4: New file, from diffutils-2.8.2.
 	* gnu-source.m4: Update from diffutils-2.8.2.
